<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:text="@string/search"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/normal_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_marginLeft="@dimen/fab_margin"
        android:text="@string/find" />

    <EditText
        android:id="@+id/etFindText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSearch"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:inputType="text" />

    <TextView
        android:layout_marginTop="@dimen/fab_margin"
        android:id="@+id/tvReplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etFindText"
        android:layout_marginLeft="@dimen/fab_margin"
        android:text="@string/replace" />

    <EditText
        android:id="@+id/etReplaceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvReplace"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/llSearchType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etReplaceText"
        android:layout_marginBottom="@dimen/fab_margin">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cbCaseSenstitve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:paddingLeft="@dimen/fab_margin"
            android:text="@string/case_sensitive" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llSearchType"
        android:gravity="center"
        android:layout_marginRight="@dimen/fab_margin"
        android:weightSum="3">

        <Button
            android:id="@+id/btFind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_drawable"
            android:text="@string/find"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btReplace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_drawable"
            android:text="@string/replace"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btReplaceall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_drawable"
            android:text="@string/replace_all"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</RelativeLayout>